Fix alignment of header resize

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -30,17 +30,17 @@
 	.header, .footer, .body {
 
 	  font-size: 0px;
-    white-space: nowrap;
+      white-space: nowrap;
 
-		.cell {
+	  .cell {
     	border-right: 1px solid @ember-grid-color;
     	padding-left: 2px;
     	padding-right: 2px;
     	padding-top: 1px;
     	padding-bottom: 2px;
     	font-size: 14px;
-      box-sizing: border-box;
-      margin: 0;
+        box-sizing: border-box;
+        margin: 0;
     	display: inline-block;
 
     	&:last-child {
@@ -58,16 +58,16 @@
     			text-align: right;
     		}
     	}
-		}
+	  }
 
-		.resize-handle {
+	  .resize-handle {
 	    position: absolute;
-	    right: -3px;
+	    right: -5px;
 	    top: 0px;
 	    bottom: 0px;
 	    width: 5px;
 	    cursor: ew-resize;
-		}
+	  }
 	}
 
   .header {
